digits and actions

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="script.js">
+    
 </head>
 <body>
     <div class="calc">
@@ -20,7 +20,7 @@
             <div class="btn seven grey-bg">7</div>
             <div class="btn eight grey-bg">8</div>
             <div class="btn nine grey-bg">9</div>
-            <div class="btn minus-plus blue-bg">+<br>-</div>
+            <div class="btn minus-plus blue-bg">+-</div>
 
             <div class="btn four grey-bg">4</div>
             <div class="btn five grey-bg">5</div>
@@ -38,5 +38,6 @@
             <div class="btn equal blue-bg">=</div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
