minus-plus and delete

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             
             <div class="btn dot grey-bg">.</div>
             <div class="btn zero grey-bg">0</div>
-            <div class="btn delete blue-bg"><img src="arrow_back_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg" alt="arrow"></p></div>
+            <div class="btn delete blue-bg"><img src="arrow_back_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg" alt="arrow"></div>
             <div class="btn equal blue-bg">=</div>
         </div>
     </div>
